# Project-Lumina

./: .env  README.md  bootstrap.py  pyproject.toml
migrations/models/: 0_20230927220549_init.py
src/: asgi.py
src/app/auth/directives/services/: signup.py
src/app/auth/v1/routers/: signup.py
src/app/auth/v1/schemas/: signup.py
src/app/school_services/course/models/: course.py
src/app/school_services/credentials/models/: credentials.py
src/app/school_services/parent/models/: parent.py
src/app/school_services/student/models/: student.py
src/app/school_services/teacher/models/: teacher.py
src/apps/authentication/directives/services/: signup.py
src/apps/authentication/v1/routers/: login.py  signup.py
src/apps/response/: response.py
src/apps/school_management_system/attendance_tracking/enums/: AttendanceStatus.py
src/apps/school_management_system/attendance_tracking/models/: school_attendance.py
src/apps/school_management_system/attendance_tracking/routers/: school_attendance.py
src/apps/school_management_system/attendance_tracking/schemas/: teacher_attendance.py
src/apps/shared/: generate_random_8.py  generate_user_id.py  month_number_to_string.py  password_hash.py  serialize_object.py
src/config/: settings.py
src/core/enums/: sort.py
src/core/models/: base.py
src/core/schemas/: response.py
src/core/services/: parse_and_list.py
src/database/: enums.py  lifespan.py  migration.py  model.py  setup.py
src/exceptions/: exception.py
src/shared/date/: get_month_dates.py  get_previous_week_dates.py  get_week_dates.py
(+73 files in other folders)
